# rustify_backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  development.env  development.pgadmin.env  diesel.toml  docker-compose.yml  test.http
migrations/2024-06-05-155635_create_posts/: up.sql
migrations/2024-06-05-175633_create_posts/: down.sql  up.sql
migrations/2024-06-15-150146_wg_if/: down.sql  up.sql
migrations/2024-06-15-151449_peers/: down.sql  up.sql
src/: api.rs  core.rs  error.rs  errors.rs  main.rs  mw_ctx.rs  mw_req_logger.rs  peer.rs  routes.rs  schema.rs  service.rs  utils.rs  web.rs
src/api/: routes_login.rs  routes_peer.rs  routes_tickets.rs
src/core/: app_state.rs  config.rs  db.rs  mod.rs  security.rs
src/domain/: ctx.rs  mod.rs
src/domain/models/: mod.rs  peer.rs  user.rs
src/handlers/: mod.rs
src/handlers/auth/: login.rs  mod.rs  register.rs
src/handlers/peers/: create_peer.rs  get_peer.rs  list_peers.rs  mod.rs  remove_peer.rs  update_peer.rs  wg_dump.rs
src/infra/: errors.rs  mod.rs
src/infra/db/: schema.rs
src/infra/repositories/: mod.rs  peer_repository.rs  user_repository.rs  wg_if_repository.rs
src/peer/: errors.rs  schema.rs
src/schema/: peer.rs  user.rs
src/service/: mod.rs  peer.rs  ticket.rs
src/utils/: mod.rs
src/utils/custom_extractors/: agent_extractor.rs  cookie_extractor.rs  json_extractor.rs  mod.rs  path_extractor.rs
src/utils/middlewares/: mod.rs  mw_ctx.rs  mw_req_logger.rs
src/web/: routes_login.rs  routes_peer.rs
tests/: quck-dev.rs
