[package]
name = "rustify_backend"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["arman <armansoltanian@gmail.com>"]
description = "A restful webapp for wg crud operations"

[dependencies]
async-graphql = "7.0.5"
async-graphql-axum = "7.0.5"
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = { version = "1.5.1", features = ["kv-mem"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.8.0"
