[package]
name = "rustify_backend"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["arman <armansoltanian@gmail.com>"]
description = "A restful webapp for wg crud operations"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4", "serde"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "serde_json", "chrono"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["form"] }
